--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -11,6 +11,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: cdk synth
+      uses: youyo/aws-cdk-github-actions@v1
+      with:
+        cdk_subcommand: 'synth'
+        cdk_version: '1.62.0'
+
     - name: cfn-lint
       uses: scottbrenner/cfn-lint-action@master
       with:
