add cfn guard action

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -21,3 +21,7 @@ jobs:
       uses: scottbrenner/cfn-lint-action@master
       with:
         args: "cdk.out/*.template.json"
+    
+    - name: cfn-guard-action
+      uses: maskerade/cfn-guard-action@v1
+
